paginated loans result